--- a/contacts/resources/public/css/main.css
+++ b/contacts/resources/public/css/main.css
@@ -4,10 +4,32 @@ body {
   width: 100%;
 }
 
+#add-contact {
+  font-family: sans-serif;
+  padding: 5px 10px;
+  border: 1px solid #666;
+  border-radius: 4px;
+  background-color: white;
+  text-transform: uppercase;
+}
+
 #contacts {
   position: absolute;
-  width: 600px;
+  width: 400px;
   left: 50%;
-  margin-left: -300px;
+  margin-left: -200px;
+  margin-top: 10px;
+}
+
+#contacts-list {
   border: 1px solid #ccc;
+  min-height: 50px;
+  padding: 10px;
+  margin-top: 10px 0 0 0;
+}
+
+#contacts-list li {
+  list-style: none;
+  margin: 0;
+  padding: 10px;
 }
