--- a/contacts/resources/public/css/main.css
+++ b/contacts/resources/public/css/main.css
@@ -4,7 +4,7 @@ body {
   width: 100%;
 }
 
-#add-contact {
+.button {
   font-family: sans-serif;
   padding: 5px 10px;
   border: 1px solid #666;
@@ -22,15 +22,16 @@ body {
   margin-top: 10px;
 }
 
-#contacts-list {
+#contacts-list, #contact-info {
   border: 1px solid #ccc;
   min-height: 50px;
   padding: 10px;
-  margin-top: 10px 0 0 0;
+  margin-top: 10px;
 }
 
 #contacts-list li {
   list-style: none;
   margin: 0;
   padding: 10px;
+  cursor: pointer;
 }
