--- a/contacts/resources/public/css/main.css
+++ b/contacts/resources/public/css/main.css
@@ -4,6 +4,23 @@ body {
   width: 100%;
 }
 
+ul {
+  margin: 0;
+  padding: 0 0 0 10px;
+}
+
+li {
+  list-style: none;
+  margin: 0;
+  padding: 10px;
+}
+
+label {
+  font-size: 11px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 .button {
   font-family: sans-serif;
   padding: 5px 10px;
@@ -29,22 +46,14 @@ body {
   margin-top: 10px;
 }
 
-li {
-  list-style: none;
-  margin: 0;
-  padding: 10px;
-}
-
 #contacts-list li {
   cursor: pointer;
 }
 
-label {
-  font-size: 11px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
 .section {
   margin-top: 20px;
+}
+
+.list {
+  font-size: 13px;
 }
