--- a/contacts/resources/public/css/main.css
+++ b/contacts/resources/public/css/main.css
@@ -58,18 +58,6 @@ label {
   font-size: 13px;
 }
 
-.editable div {
-  display: inline-block;
-  cursor: pointer;
-}
-
-.editable .prompt {
-  display: none;
+.editable button {
   margin-left: 10px;
-  text-transform: uppercase;
-  font-size: 11px;
-}
-
-.editable:hover .prompt {
-  display: inline-block;
 }
