--- a/contacts/resources/public/css/main.css
+++ b/contacts/resources/public/css/main.css
@@ -42,4 +42,6 @@ pre {
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    padding: 0;
+    margin: 0;
 }
